# yt-transcript-gpt

./: CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md
src/: main.py
src/app/: gemini_ai.py  main.py  transcript_extractor.py  ui.py  utils.py
tests/: test_gemini_ai.py  test_transcript_extractor.py
