[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript-gpt"
version = "0.1.0"
authors = [
  { name="Ujjwal Nova", email="ukrpurojekuto@gmail.com" },
]
description = "A Streamlit app to extract YouTube video transcripts and analyze them with AI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
    "youtube-transcript-api",
    "yt-dlp",
    "google-generativeai",
    "requests",
    "urllib3",
]

[project.urls]
"Homepage" = "https://github.com/ukr-projects/yt-transcript-gpt"
"Bug Tracker" = "https://github.com/ukr-projects/yt-transcript-gpt/issues"
